--- a/discovery-server-demo.properties
+++ b/discovery-server-demo.properties
@@ -1,2 +1,4 @@
 spring.application.name=discovery-client-demo
-eureka.client.serviceurl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceurl.defaultZone=http://localhost:8080/eureka/
+
+server.port:8181
